<?xml version="1.0"?>
<package format="2">
  <name>iiam</name>
  <version>0.0.0</version>
  <description>The iiam package</description>

  <maintainer email="kdel@todo.todo">kdel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
  
</package>
